# nrf-mesh-dsdv

./: README.md
kltn-main/: .gitignore  CMakeLists.txt  README.md  SYSTEM_FLOW_DIAGRAM.md  git-upload.ps1  prj.conf
kltn-main/boards/: nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
kltn-main/build_1/: .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  kltn-main_sysbuild_cache.txt  merged.hex  partitions.yml  pm.config  regions.yml  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
kltn-main/build_1/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  Kconfig.sysbuild.modules
kltn-main/build_1/Kconfig/arch/: Kconfig
kltn-main/build_1/Kconfig/boards/: Kconfig.sysbuild
kltn-main/build_1/Kconfig/soc/: Kconfig.soc  Kconfig.sysbuild
kltn-main/build_1/_sysbuild/: autoconf.h  cmake_install.cmake
kltn-main/build_1/_sysbuild/sysbuild/images/: cmake_install.cmake
kltn-main/build_1/kltn-main/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
kltn-main/build_1/kltn-main/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.nrf54l15dk
kltn-main/build_1/kltn-main/tfm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
kltn-main/include/: chat_cli.h  dsdv_router.h  dsdv_types.h  model_handler.h  neighbor_mgr.h
kltn-main/src/: chat_cli.c  dsdv_router.c  main.c  model_handler.c  neighbor_mgr.c
(+40 files in other folders)
