#
# Copyright (c) 2020 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#
cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(chat_2)

# NORDIC SDK APP START
target_sources(app PRIVATE
    src/main.c
    src/chat_cli.c
    src/model_handler.c
    src/neighbor_mgr.c   # NEW
    src/dsdv_router.c    # NEW
)
target_include_directories(app PRIVATE include)
# NORDIC SDK APP END
